# claude-session-manager

./: .gitignore  LICENSE  PLAN.md  README.md  go.mod  go.sum  pyproject.toml
.github/: SECURITY.md
.github/workflows/: ci.yml  release.yml
cmd/csm/: main.go
csm/: __init__.py  claude_runner.py  cli.py  config.py  ledger.py  queuefile.py  report.py  runner.py  schedule.py  sessions.py
internal/claude/: claude.go  claude_test.go  usage.go  usage_test.go
internal/cli/: config_cmd.go  queue_cmds.go  root.go  run_cmds.go  usage_cmd.go
internal/config/: config.go  config_test.go
internal/ledger/: ledger.go  ledger_test.go
internal/queue/: queue.go  queue_test.go
internal/report/: report.go
internal/runner/: runner.go
internal/runstate/: pid_unix.go  pid_windows.go  runstate.go  runstate_test.go
internal/schedule/: schedule.go  schedule_test.go  schedule_unix.go  schedule_windows.go
internal/sessions/: sessions.go
internal/tui/: config_tab.go  form.go  highlight.go  tui.go  tui_test.go
