[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-session-manager"
dynamic = ["version"]
description = "Claude Session Manager - spend leftover Claude Pro quota via Claude Code headless runs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ekin Baris Cakir" }]
keywords = ["claude", "claude-code", "automation", "task-queue", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Repository = "https://github.com/EkinBarisC/claude-session-manager"
Issues = "https://github.com/EkinBarisC/claude-session-manager/issues"

[project.scripts]
csm = "csm.cli:main"

[tool.setuptools]
packages = ["csm"]

[tool.setuptools.dynamic]
version = { attr = "csm.__version__" }
